# gforth

./: .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  2012words.fs  32bit.h  386.h  AUTHORS  Agenda  BUGS  BUILD-FROM-SCRATCH  Benchres  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING.LIB  ChangeLog  ChangeLog.git-unprocessed  INSTALL  INSTALL.BINDIST  INSTALL.DOS  INSTALL.md  LICENSE  Makedist.in  Makefile  Makefile.in  Makefile.wayland  NEWS  NEWS.vmgen  NEWS.vmgen.future  README  README.md  README.vmgen  SECURITY.md  ToDo  ToDo-native  abi-code-test.fs  acconfig.h  (+376 more)
arch/386/: asm.fs  disasm.fs  machine.h  testasm.fs
arch/4stack/: README  asm.fs  mach.fs  mach.sh  prim-new.fs  prim.fs  relocate-new.fs  relocate.fs
arch/6502/: asm.fs  (+5 more)
asm/: README  basic.fs  bitmask.fs  bitmask2.fs  generic.fs  numref.fs  target.fs
bench/: find-name-in.fs  find-name-in2.fs  hash-find.fs  hash-find2.fs  stagediv.fs
compat/: Makefile  README  anslocal.fs  assert.fs  caseext.fs  control.fs  defer.fs  exception.fs  execute-parsing.fs  find-name.fs  interactive-does.fs  loops.fs  macros.fs  memory.4th  package.4th  required.fs  stagediv.fs  strcomp.fs  struct.fs  vocabulary.fs  xlocals.fs
contrib/: ansi.fs  divspeed.fs  divspeed2.fs  serial.fs  strings.fs  syscalls386.fs  terminal.fs
debian/: changelog.in  control.in  rules  rules.in
distros/: ReadMe.md
doc/: .cvsignore  2012-words  2012-words-extra  Makefile.in  dummy.fs  fdl.texi  gforth.1  gforth.css  gforth.ds  gforth.js  gforth.texi.in  glossaries.doc  gpl.texi  makedoc.fs  standard-words.awk  texinfo.tex  version.texi.in  vmgen.1  vmgen.texi
ec/: 00-readme  builttag.fs  dotx.fs  mirror.fs  mirrored.fs  nesting.fs  shex.fs
engine/: .cvsignore  128bit.h  32bit.h  Makefile.in  androidmain.c  ansidecl.h  arm-cacheflush-linux.c  arm-cacheflush0.c  arm64-cacheflush.c  atanh.c  cache.c  cgen.c  cleanalign.c  config.h.in  dblsub.c  disasm.c  ecvt.c  ecvt_r.c  efgcvt_r-template.c  engine.c  exp10.c  forth.h  getopt.c  getopt.h  getopt1.c  gforth.h.in  hppa-cache.c  ia64-flush_icache_block.c  io-beagle.c  io-nxt.c  io.c  io.h  libcc.h  libcc.h.in  libmain.c  longlong.h  main.c  memcmp.c  memcmpc.c  memmove.c  (+20 more)
f/: api.4th  compat-common.4th  compat-gforth.4th  f.4th  vt100.4th
flatpak/: .flatpakrepo  build.sh  gforth.alias  org.freedesktop.Sdk.Extension.stb.yml  org.gforth.gforth.yml  org.gforth.swig.yml  org.gnu.gforth.yml  org.gnu.swig.yml
freetype-gl/: font-manager.c  freetype-gl-err.c  freetype-gl-err.h  freetype-gl-errdef.h  freetype-gl.h  ftgl-utils.c  ftgl-utils.h  opengl.h  resvg-port.c  resvg-port.h  rsvg-port.c  rsvg-port.h  text-buffer.c  texture-atlas.c  texture-font.c  texture-font.h  vector.c  vertex-attribute.c
kernel/: .cvsignore  accept.fs  aliases.fs  aliases0.fs  args.fs  basics.fs  cbr.fs  cbrpi.fs  cloop.fs  cloop2.fs  comp-ec.fs  comp.fs  cond-old.fs  cond.fs  copydoers.fs  doers.fs  errore.fs  files.fs  getdoers.fs  header-methods.fs  input-class.fs  input.fs  int.fs  interp.fs  io.fs  kernel.fs  license.fs  main.fs  memory.fs  nio.fs  pass.fs  paths.fs  prim.fs  prim0.fs  quotes.fs  recognizer.fs  require.fs  saccept.fs  special.fs  string.fs  (+8 more)
kernel-ec/: args.fs  basics.fs  cbr.fs  cbrpi.fs  cloop.fs  comp.fs  cond.fs  doers.fs  errore.fs  getdoers.fs  int.fs  io.fs  kernel.fs  license.fs  main.fs  nio.fs  pass.fs  quotes.fs  require.fs  saccept.fs  tools.fs  toolsext.fs  vars.fs  version.fs
libltdl/: Makefile.am  Makefile.in  Makefile.inc  config-h.in  configure  configure.ac  lt_dlloader.c  ltdl.c
m4/: ax_gcc_builtin.m4
minos2/: actors.fs  android-actors.fs  android-recorder.fs  animation.fs  bidi.fs  colorscheme2rgba.fs  colorschemes.fs  font-style.fs  ftgl-helper.fs  ftgl-sample.fs  gforth-1.0-presentation.fs  gl-helper.fs  gl-sample.fs  gl-slideshow.fs  gl-terminal.fs  gst-helper.fs  jpeg-exif.fs  linux-gl.fs  md-test.fs  md-viewer.fs  mem-texture.fs  mkv-tags.fs  mkv-tools.fs  mts-tools.fs  need-x.fs  omx-example.fs  open-url.fs  opus-codec.fs  plot.fs  presentation-support.fs  presentation.fs  pulse-audio.fs  sles-audio.fs  soil-texture.fs  text-style.fs  unicode-bidi.fs  unicode-mirror.fs  unihan.fs  unihan.sh  v4l2-view.fs  (+11 more)
netlib/: .cvsignore  Makefile.in  README  configure  configure.in  httpclient.fs  netlib.fs  netlib.h
snap/: build.sh  snapcraft.yaml.in
test/: bitmask.fs  caseext.fs  checkans.fs  checkans.out  complex.fs  coreext.fs  coreexttest.fs  coremore.fs  coreplustest.fs  coretest.fs  coretest.out  dbltest.fs  deferred.fs  doubletest.fs  errorreport.fs  exceptiontest.fs  facilitytest.fs  filetest.fs  float.fs  forward.fs  gforth-nofast.fs  gforth.fs  gforth.out  libcc.fs  macros.fs  memorytest.fs  other.fs  postpone.fs  primmin.fs  primtest.fs  primtesta.fs  read-line.fs  read-line.input  read-line.out  read-line.out-0.7.9_20210930  read-line2.input  regexp-test.fs  runtests.fs  search.fs  searchordertest.fs  (+8 more)
unix/: Makefile  Makefile.in  SDL.i  android.fs  androidlib.i  avcodec.i  cpu.fs  cpufeatures.i  cpufeatureslib.fs  cpufeatureslib.i  cstr.fs  darwin-gl.i  disasm2.fs  doexec  doprep  egl.i  example.c  example.h  example.i  fflib.fs  filestat.fs  freetype-gl.i  freetype-gllib.fs  freetype_gl.i  gdi.fs  gdi32.i  gl.i  gles.i  gles3.i  glesext.i  glext.i  glwin.i  glx.i  gobject.i  gps.i  gpslib.fs  gst.i  gstlib.fs  harfbuzz.i  harfbuzzlib.fs  (+78 more)
vim/: gforth.vim
vmgen-Attic/: Makefile  disasm.c
vmgen-ex/: Makefile  README  disasm.c  engine.c  fib.mini  mini-inst.vmg  mini-super.vmg  mini.h  mini.l  mini.vmg  mini.y  peephole-blacklist  peephole.c  profile.c  simple.mini  support.c  test.mini  test.out
vmgen-ex2/: Makefile  README  disasm.c  engine.c  fib.mini  fib.prof  mini-inst.vmg  mini.h  mini.l  mini.y  peephole.c  profile.c  stat.awk  support.c  test.prof
wayland/: AUTHORS  Makefile.am  autogen.sh  configure.ac  text-input-unstable-v3.h  zwp_text_input_v3_interface.cpp
wordlibs/: Makefile  README  core  dlerror.fs  dlerror.h  dlerror.pri  httpclient.fs  netlib.fs  netlib.pri  time.pri  unixlib.fs  unixlib.h  unixlib.pri
(+594 files in other folders)
